--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="text-container">
                         <h1 class="h1-large">Hii.. <br>Saya Ilham Muhamad. Saya Seorang Web Developer.</h1>
                         
-                            <a class="btn-main page-scroll" href="#about">Lihat CV</a>
+                            <a class="btn-main page-scroll" href="https://drive.google.com/file/d/17qRmPKHh5_A38BLMTCZilfoj7H9WqP_B/view?usp=sharing" target="_blank">Lihat CV</a>
                         
                     </div> 
                 </div> 
