menambahkan project forecasting

--- a/index.html
+++ b/index.html
@@ -335,15 +335,14 @@
                             </div>
                             <div class="col-lg-4 col-md-12 col-12" data-aos="fade-up" data-aos-delay="200">
                                 <div class="description">
-                                    <h4>Sistem Pendukung Keputusan (SPK)</h4>
-                                    <p class="">Program Sistem Pendukung Keputusan dengan Metode Simple Additive Weighting (SAW). Program dibuat fleksible sehingga bisa digunakan untuk kasus apa saja. 
+                                    <h4>Forecasting</h4>
+                                    <p class="">Program Forecasting(peramalan) dengan menggunakan metode Double Exponential Smoothing. dalam perhitungannya, program ini bisa mencari alpha optimal secara otomatis berdasarkan nilai mapenya. jadi tidak perlu input alpha manual satu persatu untuk mencari nilai mape terkecil. 
                                     beberapa fitur utama yang ada di website ini antara lain :
                                     <li>Terdapat 2 role. Admin dan user</li>
-                                    <li>Crud Alternatif</li>
-                                    <li>Crud Kriteria</li>
-                                    <li>Crud Crips</li>
-                                    <li>Input nilai berdasarkan Crips</li>
-                                    <li>Perhitungan SPK secara lengkap</li>
+                                    <li>Crud data aktual</li>
+                                    <li>Import Data (Excel)</li>
+                                    <li>Pencarian nilai alpha optimal secara otomatis</li>
+                                    <li>Grafik perbandingan antara data aktual dan hasil prediksi</li>
                                     </p>
                                     <p>Sistem ini dibuat dengan menggunakan PHP(Laravel 8), Mysql, Bootsrap.</p>
                                 </div>
