--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- About-->
     <div id="about" class="about bg-gray">
         <div class="container" data-aos="fade-up">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-lg-3">
                     <div class="img">
                         <img class="img-fluid" src="images/me.jpg" alt="">
@@ -83,7 +83,7 @@
                 </div> 
                 <div class="col-lg-9">
                     <div class="text-container d-flex flex-column justify-content-center">
-                        <h2 class="color-main">Tentang Saya</h2>
+                        <h4 class="">Tentang Saya</h4>
                         <p>Hallo.. Perkenalkan, nama saya Ilham Muhamad. 22 tahun berasal dari Kabupaten Trenggalek, Jawa Timur. Saya mahasiswa semester akhir di salah satu perguruan tinggi di bandung.</p>
                         <p>Saya sangat menyukai dunia programming khususnya Web Programming. Saat ini, saya memperdalam keahlian saya dibidang Backend Developer. saya terbiasa bekerja menggunakan bahasa pemograman PHP dengan Framework Laravel.</p>
                         <p>Berikut sedikit gambaran tentang keahlian saya dibidang ini.</p>
@@ -134,7 +134,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-12">
                     <div class="page-header">
-                        <h2>Project Saya</h2>
+                        <h2 class="">Project Saya</h2>
                         <p>Berikut adalah beberapa project yang pernah saya kerjakan.</p>
                     </div>
                 </div> 
@@ -272,13 +272,13 @@
                                 <div id="carouselExampleControls4" class="carousel slide image-carousel-container" data-ride="carousel" data-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img class="img-fluid project-selected" src="images/myspk1.png" alt="alternative">
+                                            <img class="img-fluid project-selected" src="images/myspk1.jpg" alt="alternative">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="img-fluid project-selected" src="images/myspk2.png" alt="alternative">
+                                            <img class="img-fluid project-selected" src="images/myspk2.jpg" alt="alternative">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="img-fluid project-selected" src="images/myspk3.png" alt="alternative">
+                                            <img class="img-fluid project-selected" src="images/myspk3.jpg" alt="alternative">
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls4" data-slide="prev">
@@ -316,13 +316,13 @@
                                 <div id="carouselExampleControls5" class="carousel slide image-carousel-container" data-ride="carousel" data-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img class="img-fluid project-selected" src="images/forecasting1.png" alt="alternative">
+                                            <img class="img-fluid project-selected" src="images/forecasting1.jpg" alt="alternative">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="img-fluid project-selected" src="images/forecasting2.png" alt="alternative">
+                                            <img class="img-fluid project-selected" src="images/forecasting2.jpg" alt="alternative">
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="img-fluid project-selected" src="images/forecasting3.png" alt="alternative">
+                                            <img class="img-fluid project-selected" src="images/forecasting3.jpg" alt="alternative">
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls5" data-slide="prev">
