update some style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&family=Pacifico&display=swap" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -83,7 +83,7 @@
                 </div> 
                 <div class="col-lg-9">
                     <div class="text-container d-flex flex-column justify-content-center">
-                        <h4 class="">About Me</h4>
+                        <h4 class=""><span class="color-main">About</span> Me</h4>
                         <p>hello.. Iam Ilham Muhamad, 23 years old from Trenggalek, East java.</p>
                         <p>Now, I am currently working at a startup in Jakarta as a Web Developer with backend and frontend skills. My expertise in backend applications, and main
                         language i use is laravel and the ecosystem.
@@ -150,7 +150,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-12">
                     <div class="page-header">
-                        <h2 class="">My Project</h2>
+                        <h2 class="">My <span class="color-main">Project</span></h2>
                         <p>Here is the personal project that I have worked.</p>
                     </div>
                 </div> 
@@ -308,7 +308,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-12">
                     <div class="py-5">
-                        <h4 class="mb-5">Besides that, I am also avaible for freelancer project</h4>
+                        <h4 class="mb-5">Besides that, I am also avaible for <span class="color-main">Freelancer Project</span></h4>
                         <p>I have experience working on educational projects such as Decision Support System (SPK), forecasting, data mining, expert systems and as well as thesis projects (S1). I also
                         work on projects for businesses such as company profiles or others.</p>
                         <a href="#contact" class="btn btn-primary mt-3">Contact me <i class="fas fa-arrow-down"></i></a>
@@ -324,7 +324,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-12">
                     <div class="page-header">
-                        <h2>My Contact</h2>
+                        <h2>My <span class="color-main">Contact</span></h2>
                         <p>It will be very nice if we work together.</p>
                     </div>
                 </div>
