update photo and some typing

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                             <img class="mb-3" src="images/details-icon-javascript.png" alt="">
                             <img class="mb-3" src="images/jquery-icon.png" alt="">
                             <img class="mb-3" src="images/react-icon.png" alt="">
+                            <img class="mb-3" src="images/next-icon.png" alt="">
+                            <img class="mb-3" src="images/redux-icon.png" alt="">
                             <img class="mb-3" src="images/ts-icon.png" alt="">
                             <img class="mb-3" src="images/php-icon.png" alt="">
                             <img class="mb-3" src="images/details-icon-laravel.png" alt="">
@@ -117,11 +119,11 @@
                         <h6 class="mb-3">Frontend</h6>
                         <ul>
                             <li>Build a website using HTML+CSS+Javascript.</li>
-                            <li>Able to slicing well from design to website.</li>
-                            <li>Understand to use Javascript libraries like Jquery and React.</li>
-                            <li>Familiar with using Typescript in React</li>
+                            <li>Slicing well from design to website.</li>
+                            <li>Using Javascript libraries or frameword like Jquery, React and Next.</li>
+                            <li>Familiar with using Typescript in React or Next</li>
                             <li>Familiar with state management like Redux</li>
-                            <li>Understand to use CSS Framework like Boostrap and Tailwind.</li>
+                            <li>Using CSS/UI Framework like Boostrap, Tailwind and Material UI.</li>
                             <li>Familiar with API integration, or third party application.</li>
                         </ul>
                     
@@ -130,11 +132,11 @@
                     
                         <h6 class="mb-3">Backend</h6>
                         <ul>
-                            <li>Build a Website or Backend using Laravel</li>
+                            <li>Build a Website or API using Laravel</li>
                             <li>Familiar with Laravel Feature like Eloquent, Event, Queue, etc.</li>
                             <li>Familiar with Laravel Ecosystem like Livewire, Jetstream, Sanctum.</li>
                             <li>Familiar with OOP dan MVC concept.</li>
-                            <li>Able to use laravel design patterns like repository and service.</li>
+                            <li>Able to use design patterns like repository and service.</li>
                             <li>Familiar to build a Restfull API.</li>
                             <li>Familiar with MySQL and PostgreSQL database.</li>
                         </ul>
@@ -150,8 +152,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-12">
                     <div class="page-header">
-                        <h2 class="">My <span class="color-main">Project</span></h2>
-                        <p>Here is the personal project that I have worked.</p>
+                        <h2 class="">My <span class="color-main">Personal Project</span></h2>
+                        <p>These are some of my personal projects I've worked.</p>
                     </div>
                 </div> 
             </div> 
@@ -324,8 +326,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-12">
                     <div class="page-header">
-                        <h2>My <span class="color-main">Contact</span></h2>
-                        <p>It will be very nice if we work together.</p>
+                        <h2>My <span class="color-main">Personal Contact</span></h2>
+                        <p>It will be very nice if we can work together.</p>
                     </div>
                 </div>
             </div>
