fix some copy, add cv, and replace email

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p class="text-light mb-3">Hello, my name is</p>
                         <h1 class="h1-large mb-5">ILHAM MUHAMAD. <br> I'm a <span class="color-main">Web Developer</span></h1>
                         
-                            <a class="btn-main page-scroll" href="#" target="_blank">View CV</a>
+                            <a class="btn-main page-scroll" href="https://drive.google.com/file/d/1mG6UidbmkS0EbjRu1vQTsRWnUGvtoMeK/view?usp=sharing" target="_blank">View CV</a>
                         
                     </div> 
                 </div> 
@@ -85,9 +85,9 @@
                     <div class="text-container d-flex flex-column justify-content-center">
                         <h4 class=""><span class="color-main">About</span> Me</h4>
                         <p>hello.. Iam Ilham Muhamad, 23 years old from Trenggalek, East java.</p>
-                        <p>Now, I am currently working at a startup in Jakarta as a Web Developer with backend and frontend skills. My expertise in backend applications, and main
-                        language i use is laravel and the ecosystem.
-                        Beside that, Iam also familiar with react javascript and typescript to build the frontend web application.
+                        <p>I’m a Web Developer with more than 1 year experience, I have a strong foundation in frontend and backend technologies.
+                        with a focus on Laravel for backend, and React for build a modern frontend application.
+                        In my current role, I have worked on a wide range of projects, from small websites to large-scale web applications for business and education.
                         I am a lifelong learner, and really likes challenges especially in technology...</p>
                         <p>here is the tech stack I use</p>
                         <div class="icons-container">
@@ -378,7 +378,7 @@
                                     <div class="content mt-4">
                                         <h5 class="title text-uppercase">Email</h5>
                                         <p class="text-muted">We Available 24 Hour for you, Email me for business or more information!.</p>
-                                        <a href="mailto:ilhammuhamads6999@gmail.com" class="text-primary">ilhammuhamads6999@gmail.com</a>
+                                        <a href="mailto:ilham.mhmds06@gmail.com" class="text-primary">ilham.mhmds06@gmail.com</a>
                                     </div>
                                 </div>
                             </div><!--end col-->
