--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 Developer</span></h1>
 
                         <a class="btn-main page-scroll"
-                            href="https://drive.google.com/file/d/11qqBrw1foiWorWcu3TPCchw9v3xAQQHu/view?usp=sharing"
+                            href="https://drive.google.com/file/d/17021MrN2jeJiP95RUfazSWXfG75QTBsN/view?usp=sharing"
                             target="_blank">View CV</a>
 
                     </div>
@@ -147,8 +147,8 @@
                     <h6 class="mb-4 mt-2">Frontend</h6>
                     <li>Slicing from design to website.</li>
                     <li>Using libraries or frameword like Jquery, React and Next.</li>
-                    <li>Using Typescript in React or Next</li>
-                    <li>Using state management like Redux</li>
+                    <li>Using Typescript in React or Next.</li>
+                    <li>Using state management like Redux.</li>
                     <li>Using CSS/UI Framework like Boostrap, Tailwind and Material UI.</li>
                     <li>API integration, or third party application.</li>
                 </div>
@@ -165,7 +165,7 @@
                     <li>Using OOP dan MVC concept.</li>
                     <li>Using solid pattern.</li>
                     <li>Using MySQL and PostgreSQL database.</li>
-            
+                    <li>Using Redis for caching.</li>
             
                 </div>
             </div>
