--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 Developer</span></h1>
 
                         <a class="btn-main page-scroll"
-                            href="https://drive.google.com/file/d/17021MrN2jeJiP95RUfazSWXfG75QTBsN/view?usp=sharing"
+                            href="#"
                             target="_blank">View CV</a>
 
                     </div>
@@ -163,7 +163,6 @@
                     <li>Work with Laravel Ecosystem.</li>
                     <li>Build a Restfull API.</li>
                     <li>Using OOP dan MVC concept.</li>
-                    <li>Using solid pattern.</li>
                     <li>Using MySQL and PostgreSQL database.</li>
                     <li>Using Redis for caching.</li>
             
@@ -427,7 +426,7 @@
                     <div class="contact-container">
                         <div class="social-media mb-4">
                             <span class="fa-stack" data-aos="zoom-in" data-aos-delay="100">
-                                <a href="https://www.facebook.com/profile.php?id=100010048149383" target="_blank">
+                                <a href="#" target="_blank">
                                     <i class="fas fa-square fa-stack-2x"></i>
                                     <i class="fab fa-facebook-f fa-stack-1x"></i>
                                 </a>
