--- a/index.html
+++ b/index.html
@@ -372,6 +372,74 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-12">
+                    <div class="project-container" data-aos="fade-left">
+                        <div class="row align-items-center referse">
+
+                            <div class="col-lg-7 col-md-12 col-12">
+                                <div id="spk_wp_carousel" class="carousel slide image-carousel-container"
+                                    data-ride="carousel" data-interval="false">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img class="img-fluid project-selected" src="images/spk_wp1.jpeg"
+                                                alt="alternative">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="img-fluid project-selected" src="images/spk_wp2.jpeg"
+                                                alt="alternative">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="img-fluid project-selected" src="images/spk_wp3.jpeg"
+                                                alt="alternative">
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button"
+                                        data-target="#spk_wp_carousel" data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <div class="inner-icon d-flex justify-content-center align-items-center"><i
+                                                class="fas fa-arrow-left"></i></div>
+                                    </button>
+                                    <button class="carousel-control-next" type="button"
+                                        data-target="#spk_wp_carousel" data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <div class="inner-icon d-flex justify-content-center align-items-center"><i
+                                                class="fas fa-arrow-right"></i></div>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-5 col-md-12 col-12">
+                                <div class="description left">
+                                    <h4>Decision Support System - personal</h4>
+                                    <p class="mt-4">Decision Support System Program with Weighted Product (WP)
+                                        Method. This is my personal education project.
+                                    </p>
+                                    <p>
+                                        This program is made
+                                        flexible so that it can
+                                        be used for any case according to the needs. Beside that, this program is
+                                        already full calculations such as alternative
+                                        data, criteria, and comparison matrix. The data displayed is also
+                                        complete, such as the results of
+                                        calculations in each iteration, until the final ranking
+                                        results.
+                                    </p>
+                                    <div class="tools">
+                                        <div class="badge red-color">
+                                            Laravel
+                                        </div>
+                                        <div class="badge yellow-color">
+                                            Javascript
+                                        </div>
+                                        <div class="badge sea-blue-color">
+                                            MySql
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="modal animate__animated animate__zoomIn text-left" id="lightBoxModal" tabindex="-1"
