--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&family=Pacifico&display=swap"
         rel="stylesheet">
+        
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -64,15 +65,15 @@
     <header id="header" class="header bg-gray">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-12">
                     <div class="text-container">
-                        <p class="text-light mb-3">Hello, my name is</p>
+                        <p class="text-light mb-3">Hello everyone! my name is</p>
                         <h1 class="h1-large mb-5">ILHAM MUHAMAD. <br> I'm a <span class="color-main">Web
                                 Developer</span></h1>
 
                         <a class="btn-main page-scroll"
-                            href="#"
-                            target="_blank">View CV</a>
+                            href="#about"
+                            target="_blank">More about me</a>
 
                     </div>
                 </div>
@@ -176,9 +177,9 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-12">
-                    <div class="page-header">
+                    <div class="page-header mb-5" data-aos="zoom-in">
                         <h2 class="">My <span class="color-main">Personal Project</span></h2>
-                        <p>These are some of my personal projects I've worked.</p>
+                        <p>I like to play with formulas and education. These are some of my personal projects I've worked.</p>
                     </div>
                 </div>
             </div>
@@ -243,7 +244,6 @@
                 <div class="col-lg-12">
                     <div class="project-container" data-aos="fade-left">
                         <div class="row align-items-center referse">
-
                             <div class="col-lg-7 col-md-12 col-12">
                                 <div id="carouselExampleControls4" class="carousel slide image-carousel-container"
                                     data-ride="carousel" data-interval="false">
@@ -276,11 +276,11 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-5 col-md-12 col-12">
+                            <div class="col-lg-5 col-md-12 col-12"> 
                                 <div class="description left">
-                                    <h4>Decision Support System - practice</h4>
+                                    <h4>Decision Support System (SAW) - personal</h4>
                                     <p class="mt-4">Decision Support System Program with Simple Additive Weighting (SAW)
-                                        Method. This is my final project for SPK when I was in college.
+                                        Method. This is my personal education project.
                                     </p>
                                     <p>
                                         This program is made
@@ -311,6 +311,73 @@
                 <div class="col-lg-12">
                     <div class="project-container" data-aos="fade-right">
                         <div class="row align-items-center">
+                            <div class="col-lg-7 col-md-12 col-12">
+                                <div id="spk_wp_carousel" class="carousel slide image-carousel-container"
+                                    data-ride="carousel" data-interval="false">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img class="img-fluid project-selected" src="images/spk_wp1.jpeg"
+                                                alt="alternative">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="img-fluid project-selected" src="images/spk_wp2.jpeg"
+                                                alt="alternative">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="img-fluid project-selected" src="images/spk_wp3.jpeg"
+                                                alt="alternative">
+                                        </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button"
+                                        data-target="#spk_wp_carousel" data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <div class="inner-icon d-flex justify-content-center align-items-center"><i
+                                                class="fas fa-arrow-left"></i></div>
+                                    </button>
+                                    <button class="carousel-control-next" type="button"
+                                        data-target="#spk_wp_carousel" data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <div class="inner-icon d-flex justify-content-center align-items-center"><i
+                                                class="fas fa-arrow-right"></i></div>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-5 col-md-12 col-12">
+                                <div class="description left">
+                                    <h4>Decision Support System (WP) - personal</h4>
+                                    <p class="mt-4">Decision Support System Program with Weighted Product (WP)
+                                        Method. This is my personal education project.
+                                    </p>
+                                    <p>
+                                        This program is made
+                                        flexible so that it can
+                                        be used for any case according to the needs. Beside that, this program is
+                                        already full calculations such as alternative
+                                        data, criteria, and comparison matrix. The data displayed is also
+                                        complete, such as the results of
+                                        calculations in each iteration, until the final ranking
+                                        results.
+                                    </p>
+                                    <div class="tools">
+                                        <div class="badge red-color">
+                                            Laravel
+                                        </div>
+                                        <div class="badge yellow-color">
+                                            Javascript
+                                        </div>
+                                        <div class="badge sea-blue-color">
+                                            MySql
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class="project-container" data-aos="fade-left">
+                        <div class="row align-items-center referse">
                             <div class="col-lg-7 col-md-12 col-12">
                                 <div id="carouselExampleControls5" class="carousel slide image-carousel-container"
                                     data-ride="carousel" data-interval="false">
@@ -372,74 +439,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12">
-                    <div class="project-container" data-aos="fade-left">
-                        <div class="row align-items-center referse">
-
-                            <div class="col-lg-7 col-md-12 col-12">
-                                <div id="spk_wp_carousel" class="carousel slide image-carousel-container"
-                                    data-ride="carousel" data-interval="false">
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img class="img-fluid project-selected" src="images/spk_wp1.jpeg"
-                                                alt="alternative">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img class="img-fluid project-selected" src="images/spk_wp2.jpeg"
-                                                alt="alternative">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img class="img-fluid project-selected" src="images/spk_wp3.jpeg"
-                                                alt="alternative">
-                                        </div>
-                                    </div>
-                                    <button class="carousel-control-prev" type="button"
-                                        data-target="#spk_wp_carousel" data-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <div class="inner-icon d-flex justify-content-center align-items-center"><i
-                                                class="fas fa-arrow-left"></i></div>
-                                    </button>
-                                    <button class="carousel-control-next" type="button"
-                                        data-target="#spk_wp_carousel" data-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <div class="inner-icon d-flex justify-content-center align-items-center"><i
-                                                class="fas fa-arrow-right"></i></div>
-                                    </button>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-5 col-md-12 col-12">
-                                <div class="description left">
-                                    <h4>Decision Support System - personal</h4>
-                                    <p class="mt-4">Decision Support System Program with Weighted Product (WP)
-                                        Method. This is my personal education project.
-                                    </p>
-                                    <p>
-                                        This program is made
-                                        flexible so that it can
-                                        be used for any case according to the needs. Beside that, this program is
-                                        already full calculations such as alternative
-                                        data, criteria, and comparison matrix. The data displayed is also
-                                        complete, such as the results of
-                                        calculations in each iteration, until the final ranking
-                                        results.
-                                    </p>
-                                    <div class="tools">
-                                        <div class="badge red-color">
-                                            Laravel
-                                        </div>
-                                        <div class="badge yellow-color">
-                                            Javascript
-                                        </div>
-                                        <div class="badge sea-blue-color">
-                                            MySql
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
 
             <div class="modal animate__animated animate__zoomIn text-left" id="lightBoxModal" tabindex="-1"
@@ -453,7 +453,7 @@
                 </div>
             </div>
 
-            <div class="github-project text-center">
+            <div class="github-project text-center" data-aos="fade-up">
                 <a href="https://github.com/Ilham06/" target="_blank" class="btn btn-primary">View other project in my
                     Github</a>
             </div>
@@ -551,10 +551,10 @@
                                     <i class="fas fa-map-marker-alt fa-stack-2x"></i>
                                     <div class="content mt-4">
                                         <h5 class="title text-uppercase">Location</h5>
-                                        <p class="text-muted">Now, i live in south jakarta. it will be great if we cant
+                                        <p class="text-muted">Now, i live in east jakarta. it will be great if we cant
                                             meet together!.</p>
-                                        <a href="https://goo.gl/maps/jwhnbgc4FDp8gVm8A" class="text-primary">Tebet,
-                                            Jakarta Selatan</a>
+                                        <a href="https://goo.gl/maps/jwhnbgc4FDp8gVm8A" class="text-primary">Ciracas,
+                                            East Jakarta</a>
                                     </div>
                                 </div>
                             </div><!--end col-->
@@ -590,7 +590,7 @@
 
     <script>
         AOS.init({
-            duration: 1300,
+            duration: 800,
             once: true
         });
     </script>
