--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body data-spy="scroll" data-target=".fixed-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" data-aos="fade-down" data-aos-duration="1100">
         <div class="container">
 
             <a class="navbar-brand logo-text page-scroll" href="index.html">Portfolio</a>
@@ -67,13 +67,15 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <p class="text-light mb-3">Hello everyone! my name is</p>
+                        <div class="" data-aos="fade-right" data-aos-delay="800" data-aos-duration="1100">
+                            <p class="text-light mb-3">Hello everyone! my name is</p>
                         <h1 class="h1-large mb-5">ILHAM MUHAMAD. <br> I'm a <span class="color-main">Web
                                 Developer</span></h1>
+                        </div>
 
                         <a class="btn-main page-scroll"
                             href="#about"
-                            target="_blank">More about me</a>
+                            target="_blank" data-aos="fade-up" data-aos-delay="1100" data-aos-duration="1100">More about me</a>
 
                     </div>
                 </div>
